<resources>
    <string name="app_name">Android Java PMP Reference</string>
    <string name="generateButton">Generate random string</string>
    <string name="defaultValueForGeneratedText">Click the button to change this text to a generated value</string>
    <string name="constraintExampleButton">Constraint Layout Activity</string>
    <string name="mainActivityTextView">Main activity</string>
    <string name="listViewExampleButton">ListView example activity</string>
    <string name="recyclerViewExampleButton">RecyclerView example activity</string>
    <string name="intentExampleButton">Intent example activity</string>
    <string name="startActivityButton">Start other activity with extra data</string>
    <string name="closeActivityButton">Close this activity</string>
    <string name="fragmentExampleButton">Fragment example activity</string>
    <string name="dialogsExampleButton">Dialogs example activity</string>
    <string name="titleTextView">Modify text</string>
    <string name="positiveButton">Change</string>
    <string name="negativeButton">Cancel</string>
    <string name="showAlertDialogButton">Show alert dialog</string>
    <string name="showCustomDialogButton">Show custom dialog</string>
    <string name="selectRandomEntryButton">Select random entry</string>
    <string name="sqliteExampleButton">SQLite example activity</string>
    <string name="serviceExampleButton">Service example activity</string>
    <string name="startBigNumberServiceButton">Start service for big number</string>
    <string name="notificationExampleButton">Show example notification</string>
</resources>