<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainActivityTextView"
        android:textAlignment="center"
        style="@style/TextColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/constraintExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/constraintExampleButton" />

            <Button
                android:id="@+id/listViewExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listViewExampleButton" />

            <Button
                android:id="@+id/recyclerViewExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recyclerViewExampleButton" />

            <Button
                android:id="@+id/intentExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intentExampleButton" />

            <Button
                android:id="@+id/fragmentExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragmentExampleButton" />
            <Button
                android:id="@+id/dialogsExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialogsExampleButton" />

            <Button
                android:id="@+id/sqliteExampleButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sqliteExampleButton" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>