<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomDialogFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/titleTextView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/positiveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/positiveButton" />

    <Button
        android:id="@+id/negativeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/negativeButton" />



</LinearLayout>